inject name fix / dark mode iterate

--- a/packages/core-ui/styles/modal.scss
+++ b/packages/core-ui/styles/modal.scss
@@ -38,7 +38,7 @@ SPDX-License-Identifier: Apache-2.0 */
 .modal-background {
   @include modal-position;
 
-  background: var(--overlay-modal-color);
+  background: var(--modal-background-color);
   z-index: 9;
 }
 
@@ -66,7 +66,6 @@ SPDX-License-Identifier: Apache-2.0 */
 }
 
 .modal-height {
-  box-shadow: 0 2px 16px 1px var(--card-shadow-color);
   transition: height 0.5s cubic-bezier(0.1, 1, 0.2, 1);
   width: 100%;
   max-width: 600px;
